include(FetchContent)

FetchContent_Declare(
    FCD_CMSIS_Driver_STM32
    GIT_REPOSITORY https://github.com/Open-CMSIS-Pack/CMSIS-Driver_STM32.git
    GIT_TAG        v1.3.0
    SOURCE_DIR     "${CMAKE_CURRENT_LIST_DIR}/CMSIS_Driver_STM32"
    SOURCE_SUBDIR  "EXTRACT_ONLY"
)

FetchContent_MakeAvailable(FCD_CMSIS_Driver_STM32)

## commented out lines are not required
SET(CMSIS_PORT_SRC ${CMSIS_PORT_SRC}
    ${CMAKE_CURRENT_LIST_DIR}/CMSIS_Driver_STM32/Drivers/ETH_MAC_STM32.c
    # ${CMAKE_CURRENT_LIST_DIR}/CMSIS_Driver_STM32/Drivers/GPIO_STM32.c
    ${CMAKE_CURRENT_LIST_DIR}/CMSIS_Driver_STM32/Drivers/I2C_STM32.c
    # ${CMAKE_CURRENT_LIST_DIR}/CMSIS_Driver_STM32/Drivers/MCI_STM32.c
    ${CMAKE_CURRENT_LIST_DIR}/CMSIS_Driver_STM32/Drivers/SPI_STM32.c
    ${CMAKE_CURRENT_LIST_DIR}/CMSIS_Driver_STM32/Drivers/USART_STM32.c
    # ${CMAKE_CURRENT_LIST_DIR}/CMSIS_Driver_STM32/Drivers/USBD_STM32.c
    ${CMAKE_CURRENT_LIST_DIR}/CMSIS_Driver_STM32/Drivers/USBH_STM32.c
    PARENT_SCOPE
)

SET(CMSIS_PORT_INC ${CMSIS_PORT_INC} ${CMAKE_CURRENT_LIST_DIR}/CMSIS_Driver_STM32/Drivers/ PARENT_SCOPE)
